--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,94 @@
-body {
-    background-color: #000000;
-    color: #FFFFFF;
+.MainBody {
+    align-content: center;
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+    font-family: Akira;
+    font-size: 25px;
+    line-height: 1.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+.ProfilePicture {
+    position: relative;
+    z-index: 2;
+    border: 5px solid #7e81f0;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+}
+
+.Text {
+    color: #7e81f0;
+    text-align: center;
+    text-shadow: #000 3px 3px 3px ;
+    position: relative;
+    z-index: 1;
+}
+
+@font-face { font-family: Akira; src: url('Akira\ Expanded\ Demo.otf'); } 
+
+.container {
+    text-align: center;
+}
+
+button {
+    align-content: center;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    padding: 0.9rem 2rem;
+    margin: 10px;
+    font-family: inherit;
+    font-size: inherit;
+    position: relative;
+    display: inline-block;
+    letter-spacing: 0.05rem;
+    font-weight: 700;
+    font-size: 17px;
+    border-radius: 500px;
+    overflow: hidden;
+    background: black;
+    color: #7e81f0;
+   }
+   
+   button span {
+    position: relative;
+    z-index: 10;
+    transition: color 0.5s;
+   }
+   
+   button:hover span {
+    color: black;
+   }
+   
+   button::before,
+   button::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   }
+   
+   button::before {
+    content: "";
+    background: #000;
+    transition: background 0.5s;
+   }
+   
+   button:hover::before {
+    background: #7e81f0;
+   }
+   
+canvas {
+    background: #000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
