--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 .MainBody {
     align-content: center;
-    background-color: #000;
+    background: #000000;
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 25%, rgba(23, 25, 59, 1) 100%);
     margin: 0;
     padding: 0;
     font-family: Akira;
@@ -12,6 +13,7 @@
     height: 100vh;
     flex-direction: column;
 }
+  
 
 .ProfilePicture {
     position: relative;
@@ -54,41 +56,46 @@ button {
     overflow: hidden;
     background: black;
     color: #7e81f0;
-   }
-   
-   button span {
+    transition: transform 0.5s, background 0.5s;
+}
+
+button span {
     position: relative;
     z-index: 10;
     transition: color 0.5s;
-   }
-   
-   button:hover span {
+}
+
+button:hover span {
     color: black;
-   }
-   
-   button::before,
-   button::after {
+}
+
+button:hover {
+    transform: translateY(-5px);
+}
+
+button::before,
+button::after {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-   }
-   
-   button::before {
+}
+
+button::before {
     content: "";
     background: #000;
     transition: background 0.5s;
-   }
-   
-   button:hover::before {
+}
+
+button:hover::before {
     background: #7e81f0;
-   }
+}
    
-canvas {
+/*canvas {
     background: #000;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
-}
+}*/
